--- a/SWITCH/package.json
+++ b/SWITCH/package.json
@@ -25,5 +25,5 @@
     "globals": "^16.5.0",
     "vite": "^7.2.2"
   },
-  "homepage": "https://themysterysolver.github.io/SWITCH"
+  "homepage": "https://themysterysolver.github.io"
 }
